--- a/themes/hugo-theme-learn/layouts/partials/logo.html
+++ b/themes/hugo-theme-learn/layouts/partials/logo.html
@@ -1,6 +1,6 @@
 <a
   id="logo"
-  href='{{ (cond (and (ne .Site.Params.landingPageURL nil) (.Site.IsMultiLingual)) .Site.Params.landingPageURL "/") }}'
+  href='{{ (cond (and (ne .Site.Params.landingPageURL nil) (.Site.IsMultiLingual)) .Site.Params.landingPageURL "/hugo-ws1") }}'
 >
   <svg
     id="Layer_1"
